ansible/roles/k8s_control_plane/files/httproute-api.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jamly-api
  namespace: jamly-api
spec:
  parentRefs:
  - name: jamly-gateway
    namespace: kube-system
  hostnames:
  - "api.jamly.eu"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: jamly-api
      port: 80
