ansible/roles/k8s_control_plane/files/httproute-web.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jamly-web
  namespace: jamly-web
spec:
  parentRefs:
  - name: jamly-gateway
    namespace: kube-system
  hostnames:
  - "staging.jamly.eu"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: jamly-web
      port: 3000
